--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.15",
     "@types/node": "^22.5.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
@@ -17,6 +18,13 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.18.1",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.6.1",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/language": "^6.10.2",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/view": "^6.33.0",
     "@fontsource/gloria-hallelujah": "^5.0.20",
     "jsx-dom": "^8.1.4",
     "mathjs": "^13.1.1"
