Add working web-llm terminal

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.33.0",
     "@fontsource/gloria-hallelujah": "^5.0.20",
+    "@mlc-ai/web-llm": "^0.2.73",
     "jquery.terminal": "^2.44.1",
     "jsx-dom": "^8.1.4",
     "mathjs": "^13.1.1"
