--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mlc-ai/web-llm": "^0.2.73",
     "jquery.terminal": "^2.44.1",
     "jsx-dom": "^8.1.4",
-    "mathjs": "^13.1.1"
+    "mathjs": "^13.1.1",
+    "monaco-editor": "^0.52.0"
   }
 }
